tests/nightly/function/compile_fail/missing_assure.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
 --> $DIR/missing_assure.rs:8:5
  |
3 |   #[pre("must be bar")]
  |  _______-
4 | | fn foo() {}
  | |___________- defined here
...
8 |       foo()
  |       ^^^-- supplied 0 arguments
  |       |
  |       expected 1 argument
